[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hyp3_sdk"
requires-python = ">=3.10"
authors = [
    {name="ASF APD/Tools Team", email="uaf-asf-apd@alaska.edu"},
]
description = "A python wrapper around the HyP3 API"
readme = "README.md"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "python-dateutil",
    "requests",
    "urllib3",
    "tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "responses"
]

[project.urls]
Homepage = "https://github.com/ASFHyP3/hyp3-sdk"
"Bug Tracker" = "https://github.com/ASFHyP3/hyp3-sdk/issues"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort: https://docs.astral.sh/ruff/rules/#isort-i
    "UP",  # pyupgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    # TODO: Uncomment the following extensions and address the warnings:
    # "D",   # pydocstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "ANN", # annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    # "PTH", # use-pathlib-pth: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
